Metodo de update de usuarios com validação correta de senha